@@ -7,22 +7,22 @@
 #            modify it under the same terms as Perl itself.             #
 #########################################################################
 # Simulates a metronome, on real-time MIDI, as an ALSA client
-#
-# should Reset at start
 
 use Term::ReadKey;
+use Time::HiRes;
 use bytes;
 
-my $Version      = '1.0'; # edited down from midiecho
-my $VersionDate  = '5may2011';
+my $Version      = '1.1'; # -t -b work; -v -p introduced
+my $VersionDate  = '8may2011';
 my $Tempo        = 120;   # beats per minute
 my $BarLength    = 4;     # beats per bar
-my @newevents;            # LoL of output events
+my $Volume       = 100;   # MIDI velocity 0..127
 my $Debug        = 0;
 my $Quiet        = 0;     # no display; for use in background, and in scripts
+my $Paused       = 0;
 my $OutputPort   = q{};
 # vt100 globals
-my $CursorRow    = 4;
+my $CursorRow    = 5;
 my $Irow         = 1;
 my $Icol         = 1;
 my $MidCol       = 32;
@@ -30,21 +30,27 @@ my $MidCol       = 32;
 eval 'require MIDI::ALSA'; if ($@) {
 	die "you'll need to install the MIDI-ALSA module from www.cpan.org\n";
 }
-use Time::HiRes;
 
 # check format of options args...
 while ($ARGV[$[] =~ /^-(\w)/) {
-	if ($1 eq 'v')      { shift;
+	if ($1 eq 'V')      { shift;
 		my $n = $0; $n =~ s{^.*/([^/]+)$}{$1};
         print "$n version $Version $VersionDate\n";
         exit 0;
-	} elsif ($1 eq 't')      { shift; %Channel = ();
+	} elsif ($1 eq 't')      { shift;
 		my $a = shift; if ($a !~ /^\d[\d.]*$/) { die "bad -t arg: $a\n"; }
-		foreach (split (',', $a)) { $Channel{$_} = 1; }
+		$Tempo     = 0 + $a;
 	} elsif ($1 eq 'b') { shift;
-		my $a = shift; if ($a !~ /^\d*$/) { die "bad -b arg: $a\n"; }
-		@Delays      = sort split (',', $a);
+		my $a = shift; if ($a !~ /^\d+$/) { die "bad -b arg: $a\n"; }
+		$BarLength = 0 + $a;
+	} elsif ($1 eq 'v') { shift;
+		my $a = shift; if ($a !~ /^\d+$/) { die "bad -v arg: $a\n"; }
+		$Volume    = 0 + $a;
+		if ($Volume < 1) { $Volume = 1;
+		} elsif ($Volume > 127) { $Volume = 127;
+		}
 	} elsif ($1 eq 'o') { shift; $OutputPort = shift;
+	} elsif ($1 eq 'p') { shift; $Paused     = 1;
 	} elsif ($1 eq 'Q') { shift; $Quiet      = 1;
 	} elsif ($1 eq 'D') { shift; $Debug      = 1;
 	} else {
@@ -59,8 +65,9 @@ while ($ARGV[$[] =~ /^-(\w)/) {
 		exit 1;
 	}
 }
+if ($Quiet) { $Paused = 0; }
 
-my $RealTimeMode = 1;   # an anacronism, from midiecho
+my $RealTimeMode = 1;  # an anacronism from midiecho; we're always RealTime.
 if ($RealTimeMode) {
 	eval 'require MIDI::ALSA'; if ($@) {
 		die "you need to install the MIDI::ALSA module from www.cpan.org\n";
@@ -93,6 +100,7 @@ if ($RealTimeMode) {
 	}
 	# system "aconnect -oil";
 	display_alsa(); display_keystrokes(); display_tempo();
+	display_paused(); display_volume();
 
 	# The child responds to keystrokes and the parent emits the alsaevents
 	if (! $Quiet) {  # 3.1
@@ -137,6 +145,19 @@ if ($RealTimeMode) {
 						kill 'HUP', $parent_pid;
 					}
     				display_tempo(); display_keystrokes();
+				} elsif ($c eq 'v') {
+					my $d = get_int('volume ?');
+					if (defined $d) {
+						$Volume = $d;
+						print STDOUT "\$Volume  = $d;\n";
+						kill 'HUP', $parent_pid;
+					}
+    				display_volume(); display_keystrokes();
+				} elsif ($c eq ' ') {
+					if ($Paused) { $Paused=0; } else { $Paused = 1; }
+					print STDOUT "\$Paused  = $Paused;\n";
+					kill 'HUP', $parent_pid;
+    				display_paused(); display_keystrokes();
 				}
 				# every second or so, the child should display_alsa()
 				# print STDOUT "$cmd\n"; kill 'HUP', $parent_pid;
@@ -149,14 +170,18 @@ if ($RealTimeMode) {
 	my $beat = 0;   # 0 .. ($BarLength-1)
 	my $next_click = 0;
 	while (1) {  # the parent...
+		# on my system, sleep is interrupted by HUP...
+		if ($Paused) { $beat = 0; Time::HiRes::sleep(10.0); next; }
+		MIDI::ALSA::syncoutput();
 		my ($is_running,$now,$nevents) = MIDI::ALSA::status();
 		my $pitch = 33;
 		if ($beat == 0 and $BarLength > 0) { $pitch = 34; }
 		$next_click += 60/$Tempo;
-		my @alsaevent = MIDI::ALSA::noteevent(9,$pitch,100,$next_click,0.3);
+		my @alsaevent=MIDI::ALSA::noteevent(9,$pitch,$Volume,$next_click,0.3);
 		my $rc = MIDI::ALSA::output(@alsaevent);
-		Time::HiRes::sleep(60/$Tempo); # HUP aborts this sleep, therefore queue
-		# MIDI::ALSA::syncoutput(); # lurches on BarLength change, not sure why
+		# HUP aborts this sleep, therefore must syncoutput as well;
+		Time::HiRes::sleep(60/$Tempo);
+		# but on its own, syncoutput lurches on BarLength change, not sure why
 		$beat += 1;
 		if ($beat >= $BarLength) { $beat = 0; }
 	}
@@ -190,15 +215,33 @@ sub display_alsa {
 
 sub display_tempo {
 	return if $Quiet;
-	my $s = "Delay $Delays[$i] ms";
 	gotoxy(1,3);       puts_30c("Tempo $Tempo beats/min");
 	gotoxy($MidCol,3); puts_clr("BarLength $BarLength beats");
     gotoxy(1,$CursorRow);
 }
 
+sub display_paused {
+	return if $Quiet;
+	gotoxy(1,4);
+	if ($Paused) {
+		puts_30c("PAUSED");
+	} else {
+		puts_30c("Playing");
+	}
+    gotoxy(1,$CursorRow);
+}
+
+sub display_volume {
+	return if $Quiet;
+	gotoxy($MidCol,4); puts_clr("Volume $Volume");
+    gotoxy(1,$CursorRow);
+}
+
 sub display_keystrokes { my $arg = $_[$[];
 	if ($Quiet) { return; }
-	my $s = " t=Tempo  b=Barlength  q=Quit" ;
+	my $s = " t=Tempo  b=Barlength  <spacebar>=";
+	if ($Paused) { $s .= "Play"; } else { $s .= "Pause"; }
+	$s .= "  v=Volume  q=Quit" ;
 	if ($arg eq 'quit') { $s = ''; }
 	gotoxy(1, $CursorRow+1); puts_clr($s); gotoxy(1,$CursorRow);
 }
@@ -215,7 +258,7 @@ sub get_int { my $s = $_[$[];   # this runs in the child
 	while (1) {
 		puts_clr("$s ($min_int..$max_int) ? ");
 		$int = <STDIN>;
-		print STDERR "\e[A";
+		print STDERR "\e[A"; $Icol = 1;
 		if ($int =~ /^-?[0-9]+$/ and $int >= $min_int and $int <= $max_int) {
 			ReadMode(4, STDIN);
 			puts_clr('');
@@ -296,13 +339,17 @@ midiclick - generates a metronome click-track on MIDI channel 9
  midiclick -t 108           # tempo is (starts at) 108 beats/min
  midiclick -t 108 -b 4      # Four beats in a bar
  midiclick -Q -t 108 -b 4   # Quiet mode; no User-Interface
+ midiclick -o 14:1 -t 108   # Output to ALSA-port 14:1
+ midiclick -p               # starts up in Paused mode
+ xterm -geometry 80x7-1+1 -exec 'midiclick -t 165 -b 5' &
 
- ~> midiclick -o 128:0 -t 144 -b 5
+ ~> midiclick -o 128:0 -t 144 -b 5 -p
  ALSA client 129                midiclick pid=2157
  Output port 129:1 is connected to 128:0
  Tempo 144 beats/min            BarLength 5 beats
+ PAUSED                         Volume 100
  _
-  t=Tempo  b=Barlength  q=Quit
+  t=Tempo  b=Barlength  <spacebar>=Play  v=Volume  q=Quit
 
  http://www.pjb.com.au/midi/midiclick.html
 
@@ -322,11 +369,24 @@ the -Q option sets Quiet-mode.
 =item I<-t 72>
 
 The Tempo will be set; to 72 beats per minute in this example.
+The default is 120.
 
 =item I<-b 3>
 
 The Bar length will be set;
 the bell will sound every 3 beats in this example
+The default is 4.
+
+=item I<-v 80>
+
+This option sets the Volume (or Velocity) of the midi output.
+The default is 100.
+
+=item I<-p>
+
+This option starts I<midiclick> in Paused state;
+you can then start it Playing with spacebar.
+This option is ignored in -Q Quiet mode.
 
 =item I<-o 128:0>
 
@@ -334,8 +394,18 @@ This option sets the ouput-port to which the midi output will be sent.
 You can check out the available ports with the command
 I<aplaymidi -l> or I<aconnect -ol>.
 The default ouput-port
-(if only B<-i> option is present)
 is the environment variable $ALSA_OUTPUT_PORTS
+
+=item I<-Q>
+
+This option runs I<midiclick> in Quiet mode;
+there is no user-interface, and the metronome just runs
+with its Tempo and BarLength as given on the command-line,
+until it is interrupted.  It can be useful in scripts.
+
+=item I<-V>
+
+This option displays the Version number.
 
 =back
 
